fix: update auth controller & error handler
