# packages/api/src/controllers/AuthController/AuthController.ts
@@ -1,14 +1,14 @@
-import { Body, Controller, Get, Post, Route, SuccessResponse } from "tsoa";
-import { User, UserStatus } from "src/entities/User";
+import { Body, Controller, Post, Route, SuccessResponse } from "tsoa";
+import { User, UserStatus } from "@/entities/User";
 import {
   hashPassword,
   comparePassword,
   generateToken,
   generatePassword,
 } from "src/utils/auth";
-import type { RegisterUserInput } from "./types";
+import type { LoginPayload, RegisterUserInput, UserDto } from "./types";
 import { EmailSender } from "src";
-import { ConflictError } from "@/middleware/types";
+import { ConflictError, NotFoundError } from "@/middleware/types";
 
 @Route("auth")
 export class AuthController extends Controller {
@@ -43,29 +43,37 @@ export class AuthController extends Controller {
     });
   }
 
-  @Get()
-  async getUsers(): Promise<any[]> {
-    return await User.find({});
-  }
   @Post("/login")
   async login(
     @Body() credentials: { email: string; password: string }
-  ): Promise<{ token: string; user: User; isFirstLogin: boolean }> {
+  ): Promise<LoginPayload> {
     const { email, password } = credentials;
+
     // Find the user in the database by their email
     const user = await User.findOne({ where: { email } });
+
     // If the user doesn't exist or the password is incorrect, throw an error
     if (!user || !(await comparePassword(password, user.password))) {
-      throw new Error("Invalid email or password");
+      throw new NotFoundError("Invalid email or password");
     }
+
     const isFirstLogin = user.status === UserStatus.PENDING;
     // Generate a JWT token
+
     const token = generateToken(user);
     /**
      * @TODO should be updated after stripe integration
      */
     user.status = UserStatus.TRIAL;
     await user.save();
-    return { token, user, isFirstLogin };
+
+    const userDto: UserDto = {
+      name: user.name,
+      email: user.email,
+      role: user.role,
+      status: user.status,
+    };
+
+    return { token, user: userDto, isFirstLogin };
   }
 }
