# packages/api/src/controllers/AuthController/types.ts
@@ -1,7 +1,20 @@
-import { UserRole } from "../../entities/User";
+import { UserRole, UserStatus } from "@/entities/User";
 
 export type RegisterUserInput = {
   name: string;
   email: string;
   role: UserRole;
+};
+
+export type UserDto = {
+  name: string;
+  email: string;
+  role: UserRole;
+  status: UserStatus;
+};
+
+export type LoginPayload = {
+  token: string;
+  user: UserDto;
+  isFirstLogin?: boolean;
 };
